# zedny-agent-demo

./: .env.example  Makefile  README.md  pyproject.toml  run.py
backend/: deps.py  main.py
backend/routes/: chat.py  health.py
config/: pricing.yaml  settings.py
deploy/: README.md  install.sh  manage.sh  zedny-chat.service
frontend/: app.py
schemas/: chat.py
services/: modal_app.py  modal_client.py
utils/: cache.py  cost.py  logger.py  metrics.py
